--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,6 +2,7 @@
   "name": "tasmit--task-management-web-app",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -10,7 +11,6 @@
     "type": "git",
     "url": "git+https://github.com/Dasberg-Innovations/Tasmit---Task-Management-Application.git"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,11 +18,12 @@
     "url": "https://github.com/Dasberg-Innovations/Tasmit---Task-Management-Application/issues"
   },
   "homepage": "https://github.com/Dasberg-Innovations/Tasmit---Task-Management-Application#readme",
-  "description": "",
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
     "nodemon": "^3.1.10"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
